[Touch: 1205] Add unit test and EUR regression test

--- a/QuantExt/test/CMakeLists.txt
+++ b/QuantExt/test/CMakeLists.txt
@@ -26,6 +26,7 @@ discountingcommodityforwardengine.cpp
 discountratiomodifiedcurve.cpp
 dynamicblackvoltermstructure.cpp
 dynamicswaptionvolmatrix.cpp
+equityblackvolsurfaceproxy.cpp
 equityforwardcurvestripper.cpp
 fillemptymatrix.cpp
 forwardbond.cpp
