--- a/QuantExt/test/testsuite.vcxproj
+++ b/QuantExt/test/testsuite.vcxproj
@@ -662,6 +662,7 @@
     <ClCompile Include="discountratiomodifiedcurve.cpp" />
     <ClCompile Include="dynamicblackvoltermstructure.cpp" />
     <ClCompile Include="dynamicswaptionvolmatrix.cpp" />
+    <ClCompile Include="equityblackvolsurfaceproxy.cpp" />
     <ClCompile Include="equityforwardcurvestripper.cpp" />
     <ClCompile Include="fillemptymatrix.cpp" />
     <ClCompile Include="forwardbond.cpp" />
