--- a/QuantExt/test/testsuite.vcxproj.filters
+++ b/QuantExt/test/testsuite.vcxproj.filters
@@ -149,6 +149,9 @@
     <ClCompile Include="forwardbond.cpp">
       <Filter>source</Filter>
     </ClCompile>
+    <ClCompile Include="equityblackvolsurfaceproxy.cpp">
+      <Filter>source</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Filter Include="source">
