--- a/Docker/docker-compose-quantlib.yml
+++ b/Docker/docker-compose-quantlib.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib:
-    image: env_quantlib:1.18_1df6081f
+    image: env_quantlib:1.18_c310d3f4e
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib
