--- a/Docker/docker-compose-quantlib-debug.yml
+++ b/Docker/docker-compose-quantlib-debug.yml
@@ -1,11 +1,11 @@
 version: '3'
 
 services:
-  env_quantlib:
-    image: env_quantlib:1.18_c310d3f4e
+  env_quantlib_debug:
+    image: env_quantlib_debug:1.18_c310d3f4e
     build:
       context: ../
-      dockerfile: Docker/Dockerfile-QuantLib
+      dockerfile: Docker/Dockerfile-QuantLib-Debug
       args:
         - boost_version=1.72.0
         - num_cores=16
