update ql version after correction

--- a/Docker/docker-compose-ore.yml
+++ b/Docker/docker-compose-ore.yml
@@ -7,5 +7,5 @@ services:
       context: ../
       dockerfile: Docker/Dockerfile-ORE
       args:
-        - quantlib_version=1.18_620b3bac4d
+        - quantlib_version=1.18_cf3091b12f
         - num_cores=16
