--- a/Docker/docker-compose-quantlib.yml
+++ b/Docker/docker-compose-quantlib.yml
@@ -2,7 +2,7 @@ version: '3'
 
 services:
   env_quantlib:
-    image: env_quantlib:1.18_620b3bac4d
+    image: env_quantlib:1.18_cf3091b12f
     build:
       context: ../
       dockerfile: Docker/Dockerfile-QuantLib
