--- a/.gitignore
+++ b/.gitignore
@@ -158,6 +158,7 @@ App/config.hpp
 ##########################
 # All QuantLib files
 ##########################
+QuantLib
 QuantLib/
 
 ###############################
