--- a/.gitignore
+++ b/.gitignore
@@ -158,8 +158,7 @@ App/config.hpp
 ##########################
 # All QuantLib files
 ##########################
-QuantLib
-QuantLib/
+/QuantLib/
 
 ###############################
 #generatedlog4cxxexecutables
