[touch:1010]initial draft implementation

--- a/OREAnalytics/orea/CMakeLists.txt
+++ b/OREAnalytics/orea/CMakeLists.txt
@@ -35,6 +35,8 @@ scenario/sensitivityscenariodata.cpp
 scenario/sensitivityscenariogenerator.cpp
 scenario/shiftscenariogenerator.cpp
 scenario/simplescenario.cpp
+scenario/spreadscenario.cpp
+scenario/spreadscenariofactory.cpp
 scenario/stressscenariodata.cpp
 scenario/stressscenariogenerator.cpp
 simulation/fixingmanager.cpp
@@ -88,6 +90,8 @@ scenario/sensitivityscenariogenerator.hpp
 scenario/shiftscenariogenerator.hpp
 scenario/simplescenario.hpp
 scenario/simplescenariofactory.hpp
+scenario/spreadscenario.hpp
+scenario/spreadscenariofactory.hpp
 scenario/stressscenariodata.hpp
 scenario/stressscenariogenerator.hpp
 simulation/fixingmanager.hpp
