--- a/QuantExt/CMakeLists.txt
+++ b/QuantExt/CMakeLists.txt
@@ -21,5 +21,5 @@ include_directories(${CMAKE_CURRENT_SOURCE_DIR})
 add_link_directory_if_exists("${QUANTLIB_SOURCE_DIR}/build/ql")
 
 add_subdirectory("qle")
-#add_subdirectory("doc")
+add_subdirectory("doc")
 add_subdirectory("test")
