Turn off code analysis warnings in VS 2019 from QL and Boost
From here:
https://stackoverflow.com/a/44640171/1771882

--- a/ore.props
+++ b/ore.props
@@ -3,6 +3,9 @@
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
   </PropertyGroup>
+  <PropertyGroup Condition="'$(Language)'=='C++'">
+    <CAExcludePath>$(ORE)\QuantLib\ql;$(BOOST)\boost;$(CAExcludePath)</CAExcludePath>
+  </PropertyGroup>
   <PropertyGroup>
     <CodeAnalysisRuleSet>$(ORE)\disable_selected.ruleset</CodeAnalysisRuleSet>
   </PropertyGroup>
