--- a/OREData/OREData.vcxproj.filters
+++ b/OREData/OREData.vcxproj.filters
@@ -51,9 +51,6 @@
     <ClInclude Include="ored\marketdata\csvloader.hpp">
       <Filter>marketdata</Filter>
     </ClInclude>
-    <ClInclude Include="ored\marketdata\curveloader.hpp">
-      <Filter>marketdata</Filter>
-    </ClInclude>
     <ClInclude Include="ored\marketdata\curvespec.hpp">
       <Filter>marketdata</Filter>
     </ClInclude>
@@ -536,9 +533,6 @@
     <ClCompile Include="ored\marketdata\csvloader.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
-    <ClCompile Include="ored\marketdata\curveloader.cpp">
-      <Filter>marketdata</Filter>
-    </ClCompile>
     <ClCompile Include="ored\marketdata\curvespec.cpp">
       <Filter>marketdata</Filter>
     </ClCompile>
@@ -898,6 +892,9 @@
     </ClCompile>
     <ClCompile Include="ored\portfolio\optionexercisedata.cpp">
       <Filter>portfolio</Filter>
+    </ClCompile>
+    <ClCompile Include="ored\configuration\curveconfig.cpp">
+      <Filter>configuration</Filter>
     </ClCompile>
   </ItemGroup>
 </Project>
