Revert "Update .gitignore"
This reverts commit 82c5753abbafff4a679a3368e84028dd5682a7a8.

--- a/.gitignore
+++ b/.gitignore
@@ -158,7 +158,8 @@ App/config.hpp
 ##########################
 # All QuantLib files
 ##########################
-/QuantLib/
+QuantLib
+QuantLib/
 
 ###############################
 #generatedlog4cxxexecutables
